Fix image placeholder text alignment

--- a/styles.css
+++ b/styles.css
@@ -65,7 +65,6 @@
 .hero-text {
     margin-left: 10%;
     width: 50%;
-    align-items: flex-start;
 }
 
 .hero-text h1{
@@ -83,7 +82,14 @@
     margin-right: 5%;
     margin-left: none;
     width: 60%;
+    height: 300px;
+    line-height: 300px;
     background-color: #7e8187;
+    text-align: center;
+}
+
+.image-placeholder {
+    color: #E5E7EB;
 }
 
 .sign-up {
